checkstyle and spotbugs